import com.android.build.api.dsl.ManagedVirtualDevice

plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    //id 'androidx.navigation.safeargs'
    id 'kotlin-kapt'
    id  'androidx.navigation.safeargs.kotlin'


    id 'de.mannodermaus.android-junit5' // version '1.9.3.0'


}

android {
    compileSdk 34


    packagingOptions {
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/ASL2.0'
        exclude 'build.xml'
    }

    defaultConfig {
        applicationId "com.example.android.architecture.blueprints.reactive"
        minSdkVersion 21
        targetSdkVersion 34
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        testInstrumentationRunnerArgument("runnerBuilder", "de.mannodermaus.junit5.AndroidJUnit5Builder") // Use JUnit 5 for local unit tests
        multiDexEnabled true
        testHandleProfiling true
        testFunctionalTest true


    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    testOptions {
        unitTests {
            includeAndroidResources = true
            returnDefaultValues = true

            all {
                jvmArgs '-XX:MaxPermSize=256m'

                if (it.name == 'testDebugUnitTest') {
                    systemProperty 'debug', 'true'
                }
            }
        }
        managedDevices {
            devices {
                // run with ../gradlew  nexusOneApi30DebugAndroidTest
                samsungapi27(ManagedVirtualDevice) {
                    // A lower resolution device is used here for better emulator performance
                    device = "samsung SM-G610F"
                    apiLevel = 27
                    // Also use the AOSP ATD image for better emulator performance
                    systemImageSource = "armeabi-v7a"
                }
            }
            groups {
                phoneAndTablet {
                    targetDevices.add(devices.samsungapi27)
                    //  targetDevices.add(devices.nexus9api30)
                }
            }
        }
    }

    //dataBinding {
    //    enabled = true
    //    enabledForTests = true
    //}
    buildFeatures {
        dataBinding true
        buildConfig true
    }
    //Compile-Options Block
    kotlinOptions {
        jvmTarget = "17"
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    namespace 'com.example.android.architecture.blueprints.todoapp'
    testNamespace "com.example.android.architecture.blueprints.todoapp.test"

    lint {
        abortOnError false
    }

  /*  hilt {
        enableTransformForLocalTests = true
    }*/

}

dependencies {

    // App dependencies
    implementation "androidx.appcompat:appcompat:1.6.1"
    implementation "androidx.cardview:cardview:1.0.0"
    implementation "com.google.android.material:material:1.10.0"
    implementation "androidx.recyclerview:recyclerview:1.3.2"
    implementation "androidx.annotation:annotation:1.7.0"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
    implementation "com.jakewharton.timber:timber:5.0.1"
    implementation "androidx.legacy:legacy-support-v4:1.0.0"
    implementation "androidx.room:room-runtime:2.6.0"
    implementation 'com.google.ar:core:1.40.0'
    implementation "androidx.multidex:multidex:2.0.1"


    kapt "androidx.room:room-compiler:2.6.0"

    // Architecture Components
    implementation "androidx.room:room-runtime:2.6.0"
    kapt "androidx.room:room-compiler:2.6.0"
    implementation "androidx.room:room-ktx:2.6.0"
    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
    kapt "androidx.lifecycle:lifecycle-compiler:2.6.2"
    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.2"
    implementation "androidx.navigation:navigation-fragment-ktx:2.7.4"
    implementation "androidx.navigation:navigation-ui-ktx:2.7.4"

    // Dependencies for local unit tests
    testImplementation "junit:junit:4.13.2"
    testImplementation "org.hamcrest:hamcrest:2.2"
    testImplementation "org.hamcrest:hamcrest-library:2.2"
    testImplementation "androidx.test.ext:junit:1.1.5"
    testImplementation "androidx.test:core-ktx:1.5.0"
    testImplementation "org.robolectric:robolectric:4.11"
    testImplementation "androidx.arch.core:core-testing:2.2.0"
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3"
    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'

    //Junit 5
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.8.2'
    androidTestImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")


    // AndroidX Test - Instrumented testing
    implementation 'androidx.test.espresso:espresso-idling-resource:3.5.1'
    androidTestImplementation  "androidx.test.espresso:espresso-idling-resource:3.5.1"
    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.5.1"
    androidTestImplementation "androidx.test.ext:junit:1.1.5"
    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.5"
    androidTestImplementation "org.mockito:mockito-core:5.3.0"
    androidTestImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3")
    androidTestImplementation "androidx.test:runner:1.5.2"
    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
    androidTestImplementation "androidx.navigation:navigation-testing:2.7.4"


    debugImplementation "androidx.fragment:fragment-testing:1.6.1"
    // required if you want to use Mockito for unit tests
    testImplementation 'org.mockito:mockito-core:5.3.0'
    // required if you want to use Mockito for Android tests
    androidTestImplementation 'org.mockito:mockito-android:2.25.0'

    // For Robolectric tests.
    testImplementation 'com.google.dagger:hilt-android-testing:2.44'
    // ...with Kotlin.
    kaptTest 'com.google.dagger:hilt-android-compiler:2.48.1'
    // For instrumented tests.
    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.44'
    // ...with Kotlin.
    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.48.1'

    // Kotlin
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.10"
    implementation "androidx.fragment:fragment-ktx:1.6.1"
}
